commit index.html by zyyituse

--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
+  <div>hahah</div>
+  <div>this is my test envaafaf</div>
   <body>this is html file test</body>
+  <script>
+   window.onload = function(){
+     console.log("mtest aaa");
+   }
+
+   window.onresize = function(){
+     alert('widow is resize');
+   }
+  </script>
 </html>
