--- a/three.html
+++ b/three.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
-  <body>three html</body>
+  <body>
+      <div>3</div>
+  </body>
 </html>
